# dutch-transcript-app

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/features/transcription/: router.py  service.py
frontend/: .env.local.example  components.json  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/api/geschiedenis/: route.ts
frontend/app/api/transcriptie/: route.ts
frontend/app/dashboard/: layout.tsx  page.tsx  template.tsx
frontend/app/dashboard/opnemen/: page.tsx
frontend/components/app/: AppIcon.tsx  ThemeToggle.tsx
frontend/components/layout/: AppShell.tsx  BottomNav.tsx  Sidebar.tsx  TopAppBar.tsx
frontend/features/auth/components/: AuthForm.tsx
frontend/features/geschiedenis/components/: TranscriptDetail.tsx  (+1 more)
frontend/lib/: types.ts
frontend/lib/supabase/: server.ts
frontend/wireframes/dashboard_silk_transcribe_desktop/: code.html
frontend/wireframes/dashboard_silk_transcribe_mobiel/: code.html
frontend/wireframes/live_opname_silk_transcribe_desktop/: code.html
frontend/wireframes/login_silk_transcribe_mobiel/: code.html
frontend/wireframes/silk_narrative_system/: DESIGN.md
frontend/wireframes/transcript_editor_silk_transcribe_desktop/: code.html
frontend/wireframes/transcript_editor_silk_transcribe_mobiel/: code.html
frontend/wireframes/upload_silk_transcribe_desktop/: code.html
frontend/wireframes/upload_silk_transcribe_mobiel/: code.html
(+6 files in other folders)
